--- a/config/compiler.properties
+++ b/config/compiler.properties
@@ -1,6 +1,6 @@
 #Robocode Compiler Properties
-#Sat Apr 27 20:24:43 EDT 2024
+#Mon May 13 13:05:19 EDT 2024
 compiler.binary=
-compiler.classpath=-classpath libs/robocode.jar\:/Users/christopher.jones/robocode/robots
+compiler.classpath=-classpath libs/robocode.jar\:/Users/1004288/Desktop/apcs/robocode/robots
 compiler.options=
 robocode.version=1.9.5.2
